navbar logo alignment issue fixed

--- a/src/components/addCulture/header/index.css
+++ b/src/components/addCulture/header/index.css
@@ -18,6 +18,7 @@
 }
 
 .brand__logo {
+  width: 73%;
   font-family: "ITC Avant Garde Pro Md", sans-serif;
   color: #222220;
   text-decoration: none;
